objects/vlocity_ins__EventDuringInteraction__c.object
<CustomObject>
    <description>Each Event During Interaction is a user clickstream event that occurred during the Expanded Interaction Log user interaction.</description>
    <fields>
        <fullName>vlocity_ins__EventType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpandedInteractionLog__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Expanded Interaction Log</label>
        <referenceTo>vlocity_ins__ExpandedInteractionLog__c</referenceTo>
        <relationshipLabel>Events During Interaction</relationshipLabel>
        <relationshipName>Events_During_Interaction</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NextEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Event</label>
        <referenceTo>vlocity_ins__EventDuringInteraction__c</referenceTo>
        <relationshipLabel>Events During Interaction</relationshipLabel>
        <relationshipName>Events_During_Interaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjRefId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Referenced</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TabSubtabID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tab Subtab ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimeOfEvent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Time Of Event</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Value__c</fullName>
        <label>value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Event During Interaction</label>
    <nameField>
        <displayFormat>EV-{0000000000}</displayFormat>
        <label>Event During Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events During Interaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>